Fix contrast in warnings

--- a/resources.whatwg.org/standard.css
+++ b/resources.whatwg.org/standard.css
@@ -277,14 +277,14 @@ dl.domintro dd p:last-child {
 }
 
 .warning {
-  color: red;
+  color: #CE3C05;
   background: #FFFFCA;
   font-weight: bolder;
   font-style: italic;
 }
 .warning::before {
   color: yellow;
-  background: red;
+  background: #CE3C05;
 }
 .warning em, .warning i, .warning var, .warning cite {
   font-style: normal;
